--- a/package.json
+++ b/package.json
@@ -27,11 +27,14 @@
     "@astrojs/react": "^4.3.0",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.4.0",
+    "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-virtual": "^3.13.9",
-    "astro": "^5.8.1",
+    "astro": "^5.9.2",
+    "classnames": "^2.5.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "tailwindcss": "^4.1.8",
     "tinacms": "^2.7.8"
   },
   "devDependencies": {
@@ -40,7 +43,8 @@
     "@types/node": "^22.15.29",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0",
-    "prettier": "^3.5.3"
+    "prettier": "^3.5.3",
+    "prettier-plugin-astro": "^0.14.1"
   },
   "recommendations": [
     "esbenp.prettier-vscode",
