--- a/src/content/config/config.json
+++ b/src/content/config/config.json
@@ -1,8 +1,8 @@
 {
   "seo": {
-    "title": "Astro Blog + Tina",
+    "title": "jaman7-wongapl-rekrutacja-web-254455",
     "description": "Welcome to my website!",
-    "siteOwner": "Your name here"
+    "siteOwner": "Krzysztof Bałon"
   },
   "nav": [
     {
@@ -20,18 +20,8 @@
   ],
   "contactLinks": [
     {
-      "title": "Twitter",
-      "link": "https://x.com/tinacms",
-      "icon": "TbBrandTwitter"
-    },
-    {
-      "title": "Docs",
-      "link": "https://tina.io/docs",
-      "icon": "TbBook2"
-    },
-    {
       "title": "GitHub",
-      "link": "https://github.com/tinacms/tinacms",
+      "link": "https://github.com/jaman7?tab=repositories",
       "icon": "TbBrandGithub"
     }
   ]
