--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@astrojs/react": "^4.3.0",
     "@astrojs/rss": "^4.0.11",
     "@astrojs/sitemap": "^3.4.0",
+    "@portabletext/to-html": "^2.0.14",
     "@tailwindcss/vite": "^4.1.8",
     "@tanstack/react-virtual": "^3.13.9",
     "astro": "^5.9.2",
@@ -34,6 +35,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
+    "sanitize-html": "^2.17.0",
     "tailwindcss": "^4.1.8",
     "tinacms": "^2.7.8"
   },
@@ -41,6 +43,7 @@
     "@playwright/test": "^1.53.0",
     "@tinacms/cli": "^1.9.8",
     "@types/node": "^22.15.29",
+    "@types/sanitize-html": "^2.16.0",
     "husky": "^9.1.7",
     "lint-staged": "^16.1.0",
     "prettier": "^3.5.3",
