--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,10 +1,7 @@
 name = "jaman7-wongapl-rekrutacja-web-254455"
-type = "javascript"
 compatibility_date = "2024-06-01"
+account_id = "4f84a28529b9250a0fb19c524d52c105"
 workers_dev = true
-
-# Pobierany z GitHub Secrets w Actions – lokalnie nadpisz ręcznie lub zostaw pusty
-account_id = "${{ secrets.CLOUDFLARE_ACCOUNT_ID }}"
 
 [site]
 bucket = "./dist"
