--- a/.github/workflows/e2e.yml
+++ b/.github/workflows/e2e.yml
@@ -27,7 +27,7 @@ jobs:
         run: npx playwright install --with-deps
 
       - name: Run Playwright Tests
-        run: npx playwright test --project=chromium --reporter=html
+        run: npx playwright test --reporter=html
 
       - name: Upload HTML report artifact
         uses: actions/upload-artifact@v4
